# herald

./: .dockerignore  .env.analytics  .env.example  .env.herald  .env.production  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_FINAL_SUCCESS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.analytics  Dockerfile.backend  Dockerfile.backend.simple  Dockerfile.complete  Dockerfile.debug  Dockerfile.frontend  Dockerfile.fullstack  Dockerfile.production.fixed  Dockerfile.production.main  Dockerfile.production.simple  Dockerfile.simple-fullstack  FINAL_STATUS.md  GUIDE_UTILISATION.md  INTEGRATION_COMPLETE.md  INTEGRATION_REPORT.md  Jenkinsfile  Makefile  Makefile.new  Makefile.old  OAUTH_SETUP.md  PERFORMANCE.md  PERFORMANCE_ENHANCEMENTS.md  PRODUCTION_TRANSITION_GUIDE.md  PRODUCT_DESCRIPTION.md  PYTHON_TO_GO_MIGRATION.md  (+43 more)
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  auto_assign.yml  dependabot.yml  pull_request_template.md
backend/: .gosec.json  Dockerfile.dev  Makefile  Makefile.grpc  README-CLAUDE-HOOKS.md  README-INFRASTRUCTURE.md  README-SONARQUBE.md  README-VPS-SETUP.md  README.md  clean-duplicates.sh  docker-compose.herald-dev.yml  docker-compose.sonarqube.yml  fix-imports.sh  fix-services-duplicates.sh  fix-services-smart.sh  go.mod  go.sum  sonar-project.properties  test_helper.sh
data/: herald.db  lol_analytics.db
database/: init.sql
docs/: README.md  jenkins-freestyle-checklist.md  jenkins-setup-guide.md
exports/: basic_test.csv  lol_export_20250817_105821.xlsx  test_export.json
frontend/: .eslintrc.cjs  Dockerfile.dev  cypress.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.simple.ts  vite.config.ts
gateway/: .env.kong.example  README.md  docker-compose.kong.yml
migrations/: 001_initial_schema.sql  004_user_validation_system.sql
monitoring/: prometheus.dev.yml
(+546 files in other folders)
